[package]
name = "vscli"
version = "0.1.10"
edition = "2021"
authors = ["Michael Lohr <michael@lohr.dev>"]
description = "A CLI tool to launch vscode projects, which supports devcontainers."
readme = "README.md"
repository = "https://github.com/michidk/vscli"
documentation = "https://github.com/michidk/vscli"
homepage = "https://github.com/michidk/vscli"
license = "MIT"
keywords = ["development", "settings", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["recent-ui"]
recent-ui = ["crossterm", "chrono", "ratatui"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"], optional = true }
clap = { version = "4.4.6", features = ["derive", "color", "help", "usage", "suggestions", "wrap_help", "env"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", optional = true }
dirs = "5.0.1"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.20"
ratatui = { version = "0.23.0", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_jsonc = { version = "1.0.107" }
wslpath2 = "0.1.1"
