[package]
name = "vscli"
version = "0.2.1"
edition = "2021"
authors = ["Michael Lohr <michael@lohr.dev>"]
description = "A CLI tool to launch vscode projects, which supports devcontainers."
readme = "README.md"
repository = "https://github.com/michidk/vscli"
documentation = "https://github.com/michidk/vscli"
homepage = "https://github.com/michidk/vscli"
license = "MIT"
keywords = ["development", "settings", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["std", "clock", "serde"]}
clap-verbosity-flag = "2.1.2"
clap = { version = "4.5.0", features = ["derive", "color", "help", "usage", "suggestions", "wrap_help", "env"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0"}
dirs = "5.0.1"
env_logger = "0.11.2"
hex = "0.4.3"
inquire = "0.6.2"
log = "0.4.20"
ratatui = { version = "0.26.1"}
serde = { version = "1.0.196", features = ["derive"] }
serde_jsonc = { version = "1.0.108" }
url = "2.5.0"
walkdir = "2.4.0"
wslpath2 = "0.1.1"
